# cmake_examples

./: README.md
cmake_test/: CMakeLists.txt  cmake_test.cpp
cmake_test/studentLibrary/: CMakeLists.txt
cmake_test/studentLibrary/include/: Student.h
cmake_test/studentLibrary/src/: Student.cpp
